Sort and display anomaly counts

--- a/video-anomaly-detection.ipynb
+++ b/video-anomaly-detection.ipynb
@@ -24,12 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 238,
    "id": "0bd3f166-3281-4670-b368-370fc5d45907",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
+    "import glob\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -944,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 237,
    "id": "41a21a90-ba37-4613-bfb5-525401e3f168",
    "metadata": {},
    "outputs": [],
@@ -1100,6 +1101,7 @@
     "    \"\"\"\n",
     "    image_files = find_data(data_dir)\n",
     "    fps = get_fps(image_files)\n",
+    "    anomaly_counts = {}\n",
     "    with tqdm(image_files.keys()) as prog:\n",
     "        for video in prog:\n",
     "            prog.set_postfix({\"Video\": video, \"Stage\": \"flows\"}, refresh=True)\n",
@@ -1121,7 +1123,9 @@
     "                f.writelines(\n",
     "                    [f\"{i}, {outliers[i]}, {outliers[i] / fps}\\n\" for i in range(Nout)]\n",
     "                )\n",
-    "    "
+    "            anomaly_counts[video] = Nout\n",
+    "            \n",
+    "    return anomaly_counts"
    ]
   },
   {
@@ -1183,14 +1187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 235,
    "id": "120f3c73-5028-47f5-b18f-7b33f0656ff3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e903d81e71c6404097eb3dd8bb4a3fbd",
+       "model_id": "a2931a98327d4f67b0c05d394cef5e55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1200,35 +1204,64 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[234], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# data_dir = \"/Users/jsanz/Downloads/100RECNX-critters/\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/jsanz/Downloads/100MEDIA-no-critters/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mprocess_videos\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdownsample\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[233], line 156\u001b[0m, in \u001b[0;36mprocess_videos\u001b[0;34m(data_dir, contamination, downsample)\u001b[0m\n\u001b[1;32m    154\u001b[0m prog\u001b[38;5;241m.\u001b[39mset_postfix({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVideo\u001b[39m\u001b[38;5;124m\"\u001b[39m: video, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStage\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mflows\u001b[39m\u001b[38;5;124m\"\u001b[39m}, refresh\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    155\u001b[0m files \u001b[38;5;241m=\u001b[39m image_files[video]\n\u001b[0;32m--> 156\u001b[0m images, flows \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_flows\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdownsample\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdownsample\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    157\u001b[0m flows_rgb \u001b[38;5;241m=\u001b[39m batch_hsv2rgb(flows)\n\u001b[1;32m    158\u001b[0m prog\u001b[38;5;241m.\u001b[39mset_postfix({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVideo\u001b[39m\u001b[38;5;124m\"\u001b[39m: video, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStage\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124manomalies\u001b[39m\u001b[38;5;124m\"\u001b[39m}, refresh\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "Cell \u001b[0;32mIn[233], line 51\u001b[0m, in \u001b[0;36mcalculate_flows\u001b[0;34m(files, downsample)\u001b[0m\n\u001b[1;32m     49\u001b[0m images \u001b[38;5;241m=\u001b[39m [ski\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mimread(f) \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m files]\n\u001b[1;32m     50\u001b[0m new_size \u001b[38;5;241m=\u001b[39m (images[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m downsample, images[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m downsample)\n\u001b[0;32m---> 51\u001b[0m images \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([(\u001b[43mresize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_size\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muint8\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m im \u001b[38;5;129;01min\u001b[39;00m images])\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# Initialize flows\u001b[39;00m\n\u001b[1;32m     54\u001b[0m dims \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(images\u001b[38;5;241m.\u001b[39mshape)\n",
-      "File \u001b[0;32m~/.venvs/anomaly/lib/python3.12/site-packages/skimage/transform/_warps.py:196\u001b[0m, in \u001b[0;36mresize\u001b[0;34m(image, output_shape, order, mode, cval, clip, preserve_range, anti_aliasing, anti_aliasing_sigma)\u001b[0m\n\u001b[1;32m    191\u001b[0m         \u001b[38;5;28;01melif\u001b[39;00m np\u001b[38;5;241m.\u001b[39many((anti_aliasing_sigma \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (factors \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)):\n\u001b[1;32m    192\u001b[0m             warn(\n\u001b[1;32m    193\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnti-aliasing standard deviation greater than zero but \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    194\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnot down-sampling along all axes\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    195\u001b[0m             )\n\u001b[0;32m--> 196\u001b[0m     filtered \u001b[38;5;241m=\u001b[39m \u001b[43mndi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgaussian_filter\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    197\u001b[0m \u001b[43m        \u001b[49m\u001b[43mimage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manti_aliasing_sigma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mndi_mode\u001b[49m\n\u001b[1;32m    198\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    199\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    200\u001b[0m     filtered \u001b[38;5;241m=\u001b[39m image\n",
-      "File \u001b[0;32m~/.venvs/anomaly/lib/python3.12/site-packages/scipy/ndimage/_filters.py:385\u001b[0m, in \u001b[0;36mgaussian_filter\u001b[0;34m(input, sigma, order, output, mode, cval, truncate, radius, axes)\u001b[0m\n\u001b[1;32m    383\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(axes) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    384\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m axis, sigma, order, mode, radius \u001b[38;5;129;01min\u001b[39;00m axes:\n\u001b[0;32m--> 385\u001b[0m         \u001b[43mgaussian_filter1d\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msigma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    386\u001b[0m \u001b[43m                          \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtruncate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mradius\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mradius\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    387\u001b[0m         \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m output\n\u001b[1;32m    388\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[0;32m~/.venvs/anomaly/lib/python3.12/site-packages/scipy/ndimage/_filters.py:283\u001b[0m, in \u001b[0;36mgaussian_filter1d\u001b[0;34m(input, sigma, axis, order, output, mode, cval, truncate, radius)\u001b[0m\n\u001b[1;32m    281\u001b[0m \u001b[38;5;66;03m# Since we are calling correlate, not convolve, revert the kernel\u001b[39;00m\n\u001b[1;32m    282\u001b[0m weights \u001b[38;5;241m=\u001b[39m _gaussian_kernel1d(sigma, order, lw)[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m--> 283\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcorrelate1d\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.venvs/anomaly/lib/python3.12/site-packages/scipy/ndimage/_filters.py:140\u001b[0m, in \u001b[0;36mcorrelate1d\u001b[0;34m(input, weights, axis, output, mode, cval, origin)\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInvalid origin; origin must satisfy \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    137\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-(len(weights) // 2) <= origin <= \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    138\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(len(weights)-1) // 2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    139\u001b[0m mode \u001b[38;5;241m=\u001b[39m _ni_support\u001b[38;5;241m.\u001b[39m_extend_mode_to_code(mode)\n\u001b[0;32m--> 140\u001b[0m \u001b[43m_nd_image\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcorrelate1d\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    141\u001b[0m \u001b[43m                      \u001b[49m\u001b[43morigin\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "source": [
     "# data_dir = \"/Users/jsanz/Downloads/100RECNX-critters/\"\n",
     "data_dir = \"/Users/jsanz/Downloads/100MEDIA-no-critters/\"\n",
-    "process_videos(data_dir, downsample=6)"
+    "counts = process_videos(data_dir, downsample=6)\n",
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "id": "d316e50a-922b-44bc-a011-eda678d63967",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video: detections\n",
+      "RCNX0025-Bird: 14\n",
+      "RCNX0067: 10\n",
+      "RCNX0057: 8\n",
+      "RCNX0078: 7\n",
+      "RCNX0035: 7\n",
+      "RCNX0065-Bird: 6\n",
+      "RCNX0030: 5\n",
+      "RCNX0068: 4\n",
+      "RCNX0073-Deer: 3\n",
+      "RCNX0066-Bird: 3\n",
+      "RCNX0060-Deer: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dir = \"/Users/jsanz/Downloads/100RECNX-critters/\"\n",
+    "# data_dir = \"/Users/jsanz/Downloads/100MEDIA-no-critters/\"\n",
+    "summaries = glob.glob(os.path.join(data_dir, \"*.txt\"))\n",
+    "videos = [os.path.splitext(os.path.basename(s))[0].split(\"_\")[0] for s in summaries]\n",
+    "counts = []\n",
+    "for s in summaries:\n",
+    "    with open(s, \"r\") as f:\n",
+    "        text = f.readline()\n",
+    "    count = int(text.strip().split(\" \")[0])\n",
+    "    counts.append(count)\n",
+    "counts = np.array(counts)\n",
+    "idxs = np.argsort(counts)[::-1]\n",
+    "counts = counts[idxs]\n",
+    "videos = np.array(videos)[idxs]\n",
+    "print(\"Video: detections\")\n",
+    "for v, c in zip(videos, counts):\n",
+    "    print(f\"{v}: {c}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d316e50a-922b-44bc-a011-eda678d63967",
+   "id": "9a82d055-4417-4cb6-a00b-10c69217a9ce",
    "metadata": {},
    "outputs": [],
    "source": []
